* Curve: removed a gap from BoardIndex (BoardIndex.template.php, forum.css) [Bug 3417]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8407 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/forum.css
+++ b/Themes/curve/css/forum.css
@@ -164,6 +164,11 @@ form#ic_login ul li label
 {
 	background: url(../images/theme/caps.png) no-repeat 100% 0;
 }
+#upshrinkHeaderIC p.pminfo
+{
+    margin: 0;
+    padding: 0.5em;
+}
 img#upshrink_ic
 {
 	float: right;
